@@ -1,0 +1,20 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+      xmlns:fo="http://www.w3.org/1999/XSL/Format">
+<xsl:template match="employees">
+  <ul>
+    <xsl:apply-templates select="employee">
+      <xsl:sort select="name/family"/>
+      <xsl:sort select="name/given"/>
+    </xsl:apply-templates>
+  </ul>
+</xsl:template>
+
+<xsl:template match="employee">
+  <li>
+    <xsl:value-of select="name/given"/>
+    <xsl:text> </xsl:text>
+    <xsl:value-of select="name/family"/>
+  </li>
+</xsl:template>
+</xsl:stylesheet>
