@@ -1,0 +1,8 @@
+<itemlist>
+  <item>item1</item>
+  <item>item2</item>
+  <item>item3</item>
+  <item>item4</item>
+  <item>item5</item>
+  <item>item6</item>
+</itemlist>
