@@ -9,6 +9,12 @@
 <th>Bonus</th>
 </tr>
 <tr>
+<td><em>North</em></td>
+<td>10</td>
+<td>9</td>
+<td>7</td>
+</tr>
+<tr>
 <td><em>West</em></td>
 <td>6</td>
 <td style="color:red">-1.5</td>
@@ -19,12 +25,6 @@
 <td>4</td>
 <td>3</td>
 <td>4</td>
-</tr>
-<tr>
-<td><em>North</em></td>
-<td>10</td>
-<td>9</td>
-<td>7</td>
 </tr>
 </table></body>
 </html>
